<resources>
    <string name="app_name">FitPlanner</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="don_t_have_account_yet">Don\'t have an Account Yet?</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_your_password">Forgot your password?!</string>
</resources>