<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@mipmap/mainbackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@mipmap/logo" />

        <TextView
            android:paddingLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20sp"
            android:textColor="@color/white"
            />

        <EditText
            android:id="@+id/emailt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:background="@drawable/btnline"
            android:inputType="textEmailAddress"
            android:outlineAmbientShadowColor="#FFFFFF" />
        <TextView
            android:paddingLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="20sp"
            android:textColor="@color/white"
            />
        <EditText
            android:id="@+id/passt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btnline"
            android:ems="20"
            android:inputType="textPassword" />
        <Space
            android:layout_width="10dp"
            android:layout_height="10dp"
            />
        <Button
            android:id="@+id/logint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/login"
            android:backgroundTint="@color/white"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_your_password"
            android:textColor="@color/white"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/resetPassword"
            android:text="@string/reset_password"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            />
        <Space
            android:layout_width="20dp"
            android:layout_height="20dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/don_t_have_account_yet"
            />
        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/register"
            android:textColor="@color/black" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>